# Agora-SAE

./: .gitignore  README.md  judge.sh  offline_train.sh  offline_train_scan.sh  pyproject.toml  requirements.txt  vector_gen.sh  vector_gen_scan.sh
agora_sae/: __init__.py  config.py  jsonl_resume.py  judge_json.py  judge_transport.py  layer_scan.py  py.typed
agora_sae/activation/: __init__.py  generator.py
agora_sae/data/: __init__.py  mixed_source.py  reasoning_steps.py
agora_sae/eval/: __init__.py  eval_sae.py  paper_math500.py
agora_sae/model/: __init__.py  topk_sae.py
agora_sae/scripts/: __init__.py  evaluate_paper_math500.py  evaluate_sae.py  generate_activations.py  sample_dataset.py  train_sae.py
agora_sae/trainer/: __init__.py  sae_trainer.py  shard_loader.py
docs/: exp_math500.md  impl.md  theory.md
scripts/: test_minimax_api.py
tests/: test_activation_pipeline.py  test_jsonl_resume.py  test_judge_json.py  test_judge_transport.py  test_layer_scan.py  test_sample_dataset_script.py  test_topk_sae.py
