[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agora-sae"
version = "0.1.0"
description = "Staged Offline SAE Training System for Reasoning Model Interpretability"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Agora Team"}
]
keywords = ["sae", "sparse autoencoder", "interpretability", "llm", "reasoning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "safetensors>=0.4.0",
    "datasets>=2.14.0",
    "wandb>=0.15.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
flash = [
    "flash-attn>=2.0.0",
]

[project.scripts]
agora-generate = "agora_sae.scripts.generate_activations:main"
agora-train = "agora_sae.scripts.train_sae:main"
agora-eval = "agora_sae.scripts.evaluate_sae:main"
agora-sample-dataset = "agora_sae.scripts.sample_dataset:main"

[project.urls]
Homepage = "https://github.com/your-org/Agora-SAE"
Repository = "https://github.com/your-org/Agora-SAE"
Documentation = "https://github.com/your-org/Agora-SAE#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["agora_sae*"]

[tool.setuptools.package-data]
agora_sae = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
